google button fixed, vertical align mishaps

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -28,7 +28,6 @@ body {
      background-image: linear-gradient(135deg, rgba(0,123,255,1) 0%, rgba(255,143,240,1) 75%);
      color: white;
      height: 100%;
-     margin: 0;
      background-repeat: no-repeat;
      background-attachment: fixed;
 }
